docs/0.18/_sources/api/gammapy.modeling.models.ExpCutoffPowerLawNormSpectralModel.rst.txt
ExpCutoffPowerLawNormSpectralModel
==================================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ExpCutoffPowerLawNormSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ExpCutoffPowerLawNormSpectralModel.alpha
      ~ExpCutoffPowerLawNormSpectralModel.covariance
      ~ExpCutoffPowerLawNormSpectralModel.default_parameters
      ~ExpCutoffPowerLawNormSpectralModel.index
      ~ExpCutoffPowerLawNormSpectralModel.is_norm_spectral_model
      ~ExpCutoffPowerLawNormSpectralModel.lambda_
      ~ExpCutoffPowerLawNormSpectralModel.norm
      ~ExpCutoffPowerLawNormSpectralModel.parameters
      ~ExpCutoffPowerLawNormSpectralModel.reference
      ~ExpCutoffPowerLawNormSpectralModel.tag
      ~ExpCutoffPowerLawNormSpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~ExpCutoffPowerLawNormSpectralModel.__call__
      ~ExpCutoffPowerLawNormSpectralModel.copy
      ~ExpCutoffPowerLawNormSpectralModel.create
      ~ExpCutoffPowerLawNormSpectralModel.energy_flux
      ~ExpCutoffPowerLawNormSpectralModel.energy_flux_error
      ~ExpCutoffPowerLawNormSpectralModel.evaluate
      ~ExpCutoffPowerLawNormSpectralModel.evaluate_error
      ~ExpCutoffPowerLawNormSpectralModel.from_dict
      ~ExpCutoffPowerLawNormSpectralModel.from_parameters
      ~ExpCutoffPowerLawNormSpectralModel.integral
      ~ExpCutoffPowerLawNormSpectralModel.integral_error
      ~ExpCutoffPowerLawNormSpectralModel.inverse
      ~ExpCutoffPowerLawNormSpectralModel.plot
      ~ExpCutoffPowerLawNormSpectralModel.plot_error
      ~ExpCutoffPowerLawNormSpectralModel.spectral_index
      ~ExpCutoffPowerLawNormSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: alpha
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: index
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: lambda_
   .. autoattribute:: norm
   .. autoattribute:: parameters
   .. autoattribute:: reference
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
