docs/2.0.1/_sources/api/gammapy.modeling.models.ExpCutoffPowerLawNormSpectralModel.rst.txt
ExpCutoffPowerLawNormSpectralModel
==================================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ExpCutoffPowerLawNormSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ExpCutoffPowerLawNormSpectralModel.alpha
      ~ExpCutoffPowerLawNormSpectralModel.covariance
      ~ExpCutoffPowerLawNormSpectralModel.default_parameters
      ~ExpCutoffPowerLawNormSpectralModel.frozen
      ~ExpCutoffPowerLawNormSpectralModel.index
      ~ExpCutoffPowerLawNormSpectralModel.is_norm_spectral_model
      ~ExpCutoffPowerLawNormSpectralModel.lambda_
      ~ExpCutoffPowerLawNormSpectralModel.norm
      ~ExpCutoffPowerLawNormSpectralModel.parameters
      ~ExpCutoffPowerLawNormSpectralModel.parameters_unique_names
      ~ExpCutoffPowerLawNormSpectralModel.pivot_energy
      ~ExpCutoffPowerLawNormSpectralModel.reference
      ~ExpCutoffPowerLawNormSpectralModel.tag
      ~ExpCutoffPowerLawNormSpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~ExpCutoffPowerLawNormSpectralModel.__call__
      ~ExpCutoffPowerLawNormSpectralModel.copy
      ~ExpCutoffPowerLawNormSpectralModel.energy_flux
      ~ExpCutoffPowerLawNormSpectralModel.energy_flux_error
      ~ExpCutoffPowerLawNormSpectralModel.evaluate
      ~ExpCutoffPowerLawNormSpectralModel.evaluate_error
      ~ExpCutoffPowerLawNormSpectralModel.freeze
      ~ExpCutoffPowerLawNormSpectralModel.from_dict
      ~ExpCutoffPowerLawNormSpectralModel.from_parameters
      ~ExpCutoffPowerLawNormSpectralModel.integral
      ~ExpCutoffPowerLawNormSpectralModel.integral_error
      ~ExpCutoffPowerLawNormSpectralModel.inverse
      ~ExpCutoffPowerLawNormSpectralModel.inverse_all
      ~ExpCutoffPowerLawNormSpectralModel.plot
      ~ExpCutoffPowerLawNormSpectralModel.plot_error
      ~ExpCutoffPowerLawNormSpectralModel.reassign
      ~ExpCutoffPowerLawNormSpectralModel.reference_fluxes
      ~ExpCutoffPowerLawNormSpectralModel.spectral_index
      ~ExpCutoffPowerLawNormSpectralModel.spectral_index_error
      ~ExpCutoffPowerLawNormSpectralModel.to_dict
      ~ExpCutoffPowerLawNormSpectralModel.unfreeze

   .. rubric:: Attributes Documentation

   .. autoattribute:: alpha
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: frozen
   .. autoattribute:: index
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: lambda_
   .. autoattribute:: norm
   .. autoattribute:: parameters
   .. autoattribute:: parameters_unique_names
   .. autoattribute:: pivot_energy
   .. autoattribute:: reference
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: freeze
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: inverse_all
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: reassign
   .. automethod:: reference_fluxes
   .. automethod:: spectral_index
   .. automethod:: spectral_index_error
   .. automethod:: to_dict
   .. automethod:: unfreeze
